Fixes #11888/spacing issue in ListBlock nested blocks

--- a/client/src/components/StreamField/StreamField.scss
+++ b/client/src/components/StreamField/StreamField.scss
@@ -15,5 +15,4 @@
 .c-sf-help .help {
   // StreamField block help text is above the blocks rather than below.
   margin-top: 0;
-  margin-bottom: theme('spacing.6');
 }
